--- a/src/scss/wordpress/_alignment.scss
+++ b/src/scss/wordpress/_alignment.scss
@@ -1,8 +1,4 @@
 @if $is-frontend {
-  // Block alignment
-  .alignleft {
-    float: left;
-    margin-right: 2em;
   // ***************************************************************************
   // Text alignments; Block alignments; Justification.
   // https://github.com/WordPress/gutenberg/blob/wp/5.9/packages/block-library/src/common.scss
@@ -25,11 +21,6 @@
     clear: both;
     margin-left: auto;
     margin-right: auto;
-  }
-
-  .alignright {
-    float: right;
-    margin-left: 2em;
   }
 
   .alignwide {
